--- a/homepage/templates/bookContent.html
+++ b/homepage/templates/bookContent.html
@@ -49,9 +49,9 @@
   </div>
   <div class="col-md-1 q_div hidden-xs hidden-sm">
     <div class="" style="overflow: hidden;width:99%;">
-      <ul class="list-unstyled q_list" style="height: 97vh;overflow: auto;width: 126%;overflow-x:hidden;">
+      <ul class="list-unstyled q_list" style="height: 97vh;overflow: auto;width: 150%;overflow-x:hidden;">
         {% for q in questions %}
-        <li ng-click="toTheTop({{forloop.counter}})"><span class="q_no">q{{ forloop.counter }}</span>
+        <li ng-click="toTheTop({{forloop.counter}})"><span class="q_no">Q{{ forloop.counter }}</span>
           <!-- <div class="question">
             <div class="" style="padding:20px;">
               <span>Lorem ipsum dolor sit amet, consectua. Utti ea commodom.</span>
