--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -22,7 +22,7 @@
             {% verbatim %}
           </ul>
         </li>
-        <li class="header_element">
+        <!-- <li class="header_element">
           <a href="" ng-mouseleave="show[2]=false" ng-mouseover="show[2]=true" class="nav_ele"> Study Material</a>
           <ul ng-mouseleave="keepshow[2]=false" ng-click="keepshow[2] = false; toggleNavbar = false;" ng-mouseover="keepshow[2]=true" ng-show="show[2]||keepshow[2]" class="container_box">
             <li><a href="/ncert">NCERT Solutions</a></li>
@@ -35,9 +35,9 @@
             <li><a href="">Important Questions</a></li>
             <li><a href="">Math Formula Sheets</a></li>
           </ul>
-        </li>
+        </li> -->
         <li class="header_element">
-          <a href="/blog" ng-mouseleave="show[1]=false" ng-mouseover="show[1]=true" class="nav_ele"> Blogs</a>
+          <a href="/blog" ng-mouseleave="show[1]=false" ng-mouseover="show[1]=true" class="nav_ele"> Blog</a>
         </li>
         <!-- <li class="header_element">
           <a href="" ng-mouseleave="show[3]=false" ng-mouseover="show[3]=true" style="color:#fff;">About Us</a>
