--- a/libreERP/templates/base.html
+++ b/libreERP/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" charset="utf-8">
     {% block specific_css %}{% endblock %}
   </head>
-  <body id="page-top" class="index">
+  <body id="page-top" class="index" ng-swipe-left="show_menu()">
       {% block header %}{% endblock %}
       {% block content %}{% endblock %}
       {% block tutorbookcontent %}{% endblock %}
