--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -1557,7 +1557,6 @@ hr {
   height: 130px;
   border-radius: 65px;
   /* border: 2px solid #A9A9A9; */
-  background-color: #FFD119;
   position: absolute;
   top: 47%;
   left: 34%;
@@ -2525,6 +2524,7 @@ hr {
   width: 219.683px;
   height: 300px;
   margin-left: -15px;
+	border-radius: 10px 0 0 10px;
 }
 
 .genericHeading {
