--- a/homepage/templates/exam.html
+++ b/homepage/templates/exam.html
@@ -39,13 +39,12 @@
           <h4 class="text-right subtext" style="float:right;"><b>Single Choice Type Question</b></h4>
         </div>
         <div class="queanswer">
-          <div ng-repeat="a in questionList" ng-show='$index === subcount' ng-init="subindex=$index">
-            <div ng-repeat="b in a.testquestions">
-              <h3 style="margin-left:1em;" ng-show="$index === count" math-jax-bind="questionList[subindex].testquestions[$index].Question">{{b.Question}}</h3>
+          <div ng-repeat="a in subquestions" ng-show='$index === subcount' ng-init="subindex=$index">
+            <div ng-repeat="b in a.ques ">
+              <h3 style="margin-left:1em;" ng-show="$index === count" >{{b.que}}</h3>
 
               <ol style="margin-left:2em;font-size:20px;color:#6C6464;" type='A' class="answers" ng-show="$index === count">
-                <li ng-repeat="c in b.Options track by $index" class="optionhover" style="padding:0.5em;position:relative;" ng-click="selection(subindex,$parent.$index,$index)" ng-class="{'selected' : selections[subindex].answers[$parent.$index] == $index}"
-                  math-jax-bind="questionList[subindex].testquestions[$parent.$index].Options[$index]">{{c}}</li>
+                <li ng-repeat="c in b.option track by $index" class="optionhover" style="padding:0.5em;position:relative;" ng-click="selection(subindex,$parent.$index,$index)" ng-class="{'selected' : selections[subindex].answers[$parent.$index] == $index}">{{c.txt}}</li>
               </ol>
             </div>
           </div>
@@ -63,9 +62,9 @@
       <!-- <div class="col-md-3 .visible-md collapse navbar-collapse" id="questionlist" uib-collapse="!toggleNavbar" style="padding-top:2em;background-color: #F5F5F5;min-height:100vh;" > -->
       <h4 style="margin-left:0.2em;">Question Overview</h4>
       <div style="margin-bottom:10em;">
-        <div ng-repeat="b in questionList" ng-show='$index === subcount'>
+        <div ng-repeat="b in subquestions" ng-show='$index === subcount'>
 
-          <div class="text-center" ng-repeat="a in b.testquestions  | limitTo:9">
+          <div class="text-center" ng-repeat="a in b.ques  | limitTo:9">
 
             <div class="col-md-2 col-xs-2 " ng-init="$parent.$index==0?($first?a.status='notanswered':'default'):'default'" style="min-height:66px;text-align: center">
               <div ng-class="a.status=='answered'?'answered':(a.status=='notanswered'?'notanswered':(a.status=='reviewed'?'reviewed':(a.status=='attemptreviewed'?'attemptreviewed':'notview')))" ng-click="queclick($index)">
@@ -76,8 +75,8 @@
 
           </div>
         </div>
-        <div ng-repeat="b in questionList" ng-show='$index === subcount'>
-          <div ng-repeat="a in b.testquestions   | limitTo:b.testquestions.length:9" class="text-center">
+        <div ng-repeat="b in subquestions" ng-show='$index === subcount'>
+          <div ng-repeat="a in b.ques   | limitTo:b.ques.length:9" class="text-center">
             <div class="col-md-2 col-xs-2 " ng-init="a.status='default'" style="min-height:66px;">
               <div ng-class="a.status=='answered'?'answered':(a.status=='notanswered'?'notanswered':(a.status=='reviewed'?'reviewed':(a.status=='attemptreviewed'?'attemptreviewed':'notview')))" ng-click="queclick($index+9)">
                 <span class="numberalign1"><b>{{9+$index+1}}</b></span>
@@ -144,7 +143,7 @@
           <button class="btns">Questions</button>
         </div>
         <div class="col-md-12 text-center">
-          <button class="btns" ng-click="finish(selections,questionList)">Finish</button>
+          <button class="btns" ng-click="finish(selections,subquestions)">Finish</button>
         </div>
 
       </div>
