--- a/homepage/templates/blogdetails.html
+++ b/homepage/templates/blogdetails.html
@@ -49,6 +49,17 @@
         <div style="padding:0 15px;">
           <div class="textHeading">
             <h4>Most Recent Posts</h4>
+
+            <div style="padding:0 30px;">
+                {% for blog in recentBlogs %}
+              <div style="border-bottom:1px solid #e0e0e0;">
+                <a href="/{{blog.shortUrl}}" style="text-decoration:none;" >
+                  <p style="font-size:13px; font-weight:bold; cursor:pointer;"> <span>{{ forloop.counter }}. </span> <span> {{blog.title}} </span>  </p>
+                </a>
+              </div>
+              {% endfor %}
+            </div>
+
           </div>
 
         </div>
