--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     {% verbatim %}
     <div class="navbar-header" style="padding-top:7px;">
-      <a class="navbar-brand" href="/" style="padding:0px;"> <img src="/static/images/24tut/icon_grad.svg" height="100%"> </a>
+      <a class="navbar-brand" href="/" style="padding:0px; outline:none;"> <img src="/static/images/24tut/icon_grad.svg" height="100%"> </a>
 
       <div class="navbar-toggle toggleBtn" data-toggle="collapse" data-target="#myNavbar" ng-click="toggleNavbar = !toggleNavbar" style="border:none;">
         <span class="icon-bar"></span>
@@ -49,7 +49,8 @@
           </ul>
         </li> -->
         <li class="header_element">
-          <a ng-click="signin()" href="" ng-mouseleave="show[4]=false" ng-mouseover="show[4]=true" class="nav_ele"><i class="fa fa-key fa-fw" aria-hidden="true"></i>Sign in</a>
+          <a ng-if="me.pk ==  undefined" ng-click="signin()" href="" ng-mouseleave="show[4]=false" ng-mouseover="show[4]=true" class="nav_ele"><i class="fa fa-key fa-fw" aria-hidden="true"></i> Sign in</a>
+          <a ng-if="me.pk" href="" ng-mouseleave="show[4]=false" ng-mouseover="show[4]=true" class="nav_ele">{{me.username}} </a>
         </li>
 
       </ul>
