--- a/homepage/templates/tutorBase.html
+++ b/homepage/templates/tutorBase.html
@@ -59,7 +59,9 @@
 <script src="{% static 'js/angular-owl-carousel-2.js' %}"></script>
 <script src="{% static 'js/datetimepicker.js' %}"></script>
 <script src="{% static 'js/angular-flash.js' %}"></script>
+<script src="{% static 'js/custom/nativeJS.js' %}"></script>
 <script src="{% static 'js/custom/filters.js' %}"></script>
+<script src="{% static 'js/custom/services.js' %}"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$']]} });
