--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -47,7 +47,7 @@
     <div flash-message="4000" style="position:fixed;top:70px;right:10px;z-index:9999;min-width:300px;"></div>
 
     {% verbatim %}
-      <div id="sideMenu" style="background:var(--themeMain);width:5%;{{mobileView ? 'width:31%': ';'}};min-height:100vh;position:fixed;z-index:100;" class="sideMenuView" ng-include="sideMenu">
+      <div id="sideMenu" style="background:var(--themeMain);width:5%;{{mobileView ? 'width:31%;': ''}}min-height:100vh;position:fixed;z-index:100;" class="sideMenuView" ng-include="sideMenu">
       </div>
 
 
