--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -2270,6 +2270,35 @@ hr {
   bottom: -33px;
   left: 45%;
 }
+.courseobj_container {
+  box-shadow: 1px 1px 8px 0 rgba(70, 70, 70, 0.25);
+  height: 230px;
+  padding: 15px;
+  overflow-y: hidden;
+	border-radius: 8px;
+}
+.courseobj_container h5{
+  margin-bottom: 20px;
+}
+.courseobj_img{
+  position: absolute;
+  top: 8px;
+  right: 18px;
+  z-index: 20;
+  width:13%;
+}
+.courseobj_container::before{
+  content: '';
+  background-color: #223657;
+  width:70px;
+  height: 70px;
+  position: absolute;
+  top: 0;
+  right: 13px;
+  border-bottom-left-radius: 100%;
+  z-index: 10;
+	border-top-right-radius:8px;
+}
 
 
 /* exams css properties */
