--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -7,7 +7,7 @@
       <h1 class="heading_big">Start a Journey. Enroll Now</h1>
       <h5 class="heading_small">Learn SOMETHING WHEREEVER YOU ARE</h5>
       <div class="foot_btn">
-        <button type="button" class="btn_gradient ">Join a Course Now</button>
+        <button type="button" class="btn_gradient " ng-click="signin()">Join a Course Now</button>
       </div>
     </div>
   </div>
